src/mesh/snapshots/tests__box_sharp_after_1_iteration_of_loop_subdivision.snap
---
source: src/mesh/smoothing.rs
expression: "&subdivided_mesh"
---
{
  "faces": [
    {
      "Triangle": {
        "vertices": [
          0,
          8,
          10
        ],
        "normals": [
          0,
          8,
          10
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          9,
          8
        ],
        "normals": [
          1,
          9,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          10,
          9
        ],
        "normals": [
          2,
          10,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          9,
          10
        ],
        "normals": [
          8,
          9,
          10
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          10,
          12
        ],
        "normals": [
          0,
          10,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          11,
          10
        ],
        "normals": [
          2,
          11,
          10
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          12,
          11
        ],
        "normals": [
          3,
          12,
          11
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          11,
          12
        ],
        "normals": [
          10,
          11,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          4,
          13,
          15
        ],
        "normals": [
          4,
          13,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          14,
          13
        ],
        "normals": [
          5,
          14,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          15,
          14
        ],
        "normals": [
          6,
          15,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          13,
          14,
          15
        ],
        "normals": [
          13,
          14,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          4,
          15,
          17
        ],
        "normals": [
          4,
          15,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          16,
          15
        ],
        "normals": [
          6,
          16,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          17,
          16
        ],
        "normals": [
          7,
          17,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          15,
          16,
          17
        ],
        "normals": [
          15,
          16,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          18,
          19
        ],
        "normals": [
          1,
          18,
          19
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          16,
          18
        ],
        "normals": [
          7,
          16,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          19,
          16
        ],
        "normals": [
          6,
          19,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          16,
          19,
          18
        ],
        "normals": [
          16,
          19,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          19,
          9
        ],
        "normals": [
          1,
          19,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          20,
          19
        ],
        "normals": [
          6,
          20,
          19
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          9,
          20
        ],
        "normals": [
          2,
          9,
          20
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          9,
          19,
          20
        ],
        "normals": [
          9,
          19,
          20
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          12,
          22
        ],
        "normals": [
          0,
          12,
          22
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          21,
          12
        ],
        "normals": [
          3,
          21,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          22,
          21
        ],
        "normals": [
          5,
          22,
          21
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          12,
          21,
          22
        ],
        "normals": [
          12,
          21,
          22
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          22,
          23
        ],
        "normals": [
          0,
          22,
          23
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          13,
          22
        ],
        "normals": [
          5,
          13,
          22
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          4,
          23,
          13
        ],
        "normals": [
          4,
          23,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          13,
          23,
          22
        ],
        "normals": [
          13,
          23,
          22
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          20,
          11
        ],
        "normals": [
          2,
          20,
          11
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          24,
          20
        ],
        "normals": [
          6,
          24,
          20
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          11,
          24
        ],
        "normals": [
          3,
          11,
          24
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          20,
          24
        ],
        "normals": [
          11,
          20,
          24
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          24,
          21
        ],
        "normals": [
          3,
          24,
          21
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          14,
          24
        ],
        "normals": [
          6,
          14,
          24
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          21,
          14
        ],
        "normals": [
          5,
          21,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          14,
          21,
          24
        ],
        "normals": [
          14,
          21,
          24
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          23,
          25
        ],
        "normals": [
          0,
          23,
          25
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          4,
          17,
          23
        ],
        "normals": [
          4,
          17,
          23
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          25,
          17
        ],
        "normals": [
          7,
          25,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          17,
          25,
          23
        ],
        "normals": [
          17,
          25,
          23
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          25,
          8
        ],
        "normals": [
          0,
          25,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          18,
          25
        ],
        "normals": [
          7,
          18,
          25
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          8,
          18
        ],
        "normals": [
          1,
          8,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          25,
          18
        ],
        "normals": [
          8,
          25,
          18
        ]
      }
    }
  ],
  "vertices": [
    [
      -0.3125,
      0.3125,
      -0.3125
    ],
    [
      -0.3125,
      0.3125,
      0.40625
    ],
    [
      0.3125,
      0.40625,
      0.3125
    ],
    [
      0.40625,
      0.3125,
      -0.3125
    ],
    [
      -0.3125,
      -0.40625,
      -0.3125
    ],
    [
      0.3125,
      -0.3125,
      -0.40625
    ],
    [
      0.3125,
      -0.3125,
      0.3125
    ],
    [
      -0.40625,
      -0.3125,
      0.3125
    ],
    [
      -0.375,
      0.375,
      0.125
    ],
    [
      0.0,
      0.375,
      0.375
    ],
    [
      0.0,
      0.5,
      0.0
    ],
    [
      0.375,
      0.375,
      0.0
    ],
    [
      0.125,
      0.375,
      -0.375
    ],
    [
      0.0,
      -0.375,
      -0.375
    ],
    [
      0.375,
      -0.375,
      -0.125
    ],
    [
      0.0,
      -0.5,
      0.0
    ],
    [
      -0.125,
      -0.375,
      0.375
    ],
    [
      -0.375,
      -0.375,
      0.0
    ],
    [
      -0.375,
      0.0,
      0.375
    ],
    [
      0.0,
      0.0,
      0.5
    ],
    [
      0.375,
      0.125,
      0.375
    ],
    [
      0.375,
      0.0,
      -0.375
    ],
    [
      0.0,
      0.0,
      -0.5
    ],
    [
      -0.375,
      -0.125,
      -0.375
    ],
    [
      0.5,
      0.0,
      0.0
    ],
    [
      -0.5,
      0.0,
      0.0
    ]
  ],
  "normals": [
    [
      -0.57735026,
      0.57735026,
      -0.57735026
    ],
    [
      -0.45149752,
      0.45149752,
      0.7696102
    ],
    [
      0.45149752,
      0.7696102,
      0.45149752
    ],
    [
      0.7696103,
      0.4514975,
      -0.45149755
    ],
    [
      -0.45149752,
      -0.7696102,
      -0.45149752
    ],
    [
      0.45149752,
      -0.45149752,
      -0.7696102
    ],
    [
      0.57735026,
      -0.57735026,
      0.57735026
    ],
    [
      -0.7696103,
      -0.4514975,
      0.45149755
    ],
    [
      -0.69923955,
      0.69923955,
      0.14875524
    ],
    [
      2.8438347e-9,
      0.70710677,
      0.70710677
    ],
    [
      -0.028677894,
      0.9991772,
      -0.02867789
    ],
    [
      0.7071068,
      0.70710677,
      2.8438347e-9
    ],
    [
      0.14875524,
      0.69923955,
      -0.69923955
    ],
    [
      -2.8438347e-9,
      -0.70710677,
      -0.70710677
    ],
    [
      0.69923955,
      -0.69923955,
      -0.14875524
    ],
    [
      0.028677888,
      -0.9991772,
      0.02867789
    ],
    [
      -0.14875524,
      -0.69923955,
      0.69923955
    ],
    [
      -0.7071068,
      -0.70710677,
      -2.8438347e-9
    ],
    [
      -0.70710677,
      2.8438347e-9,
      0.70710677
    ],
    [
      0.02867789,
      -0.028677888,
      0.9991772
    ],
    [
      0.69923955,
      0.14875524,
      0.69923955
    ],
    [
      0.70710677,
      -2.8438347e-9,
      -0.70710677
    ],
    [
      -0.02867789,
      0.028677894,
      -0.9991772
    ],
    [
      -0.69923955,
      -0.14875524,
      -0.69923955
    ],
    [
      0.9991772,
      -0.02867789,
      0.028677888
    ],
    [
      -0.9991772,
      0.02867789,
      -0.028677894
    ]
  ]
}
