src/mesh/snapshots/tests__single_voxel.snap
---
source: src/mesh/voxel_cloud.rs
expression: "&voxel_cloud"
---
{
  "block_start": [
    0,
    0,
    0
  ],
  "block_dimensions": [
    1,
    1,
    1
  ],
  "voxel_dimensions": [
    1.0,
    1.0,
    1.0
  ],
  "voxel_map": [
    true
  ]
}
