src/mesh/snapshots/tests__sphere_after_voxelization.snap
---
source: src/mesh/voxel_cloud.rs
expression: "&voxel_cloud"
---
{
  "block_start": [
    -1,
    -1,
    -1
  ],
  "block_dimensions": [
    3,
    3,
    3
  ],
  "voxel_dimensions": [
    0.5,
    0.5,
    0.5
  ],
  "voxel_map": [
    false,
    true,
    false,
    true,
    true,
    true,
    false,
    true,
    false,
    true,
    true,
    true,
    true,
    false,
    true,
    true,
    true,
    true,
    false,
    true,
    false,
    true,
    true,
    true,
    false,
    true,
    false
  ]
}
