src/mesh/snapshots/tests__sphere_after_voxelization_into_scalar_field.snap
---
source: src/mesh/scalar_field.rs
expression: "&scalar_field"
---
{
  "block_start": [
    -1,
    -1,
    -1
  ],
  "block_dimensions": [
    3,
    3,
    3
  ],
  "voxel_dimensions": [
    0.5,
    0.5,
    0.5
  ],
  "values": [
    32767,
    0,
    32767,
    0,
    0,
    0,
    32767,
    0,
    32767,
    0,
    0,
    0,
    0,
    32767,
    0,
    0,
    0,
    0,
    32767,
    0,
    32767,
    0,
    0,
    0,
    32767,
    0,
    32767
  ]
}
