src/mesh/snapshots/tests__triple_torus_after_1_iteration_of_laplacian_smoothing.snap
---
source: src/mesh/smoothing.rs
expression: "&relaxed_mesh"
---
{
  "faces": [
    {
      "Triangle": {
        "vertices": [
          0,
          4,
          3
        ],
        "normals": [
          0,
          4,
          3
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          9,
          1
        ],
        "normals": [
          0,
          9,
          1
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          3,
          2
        ],
        "normals": [
          1,
          3,
          2
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          9,
          7
        ],
        "normals": [
          5,
          9,
          7
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          6,
          9
        ],
        "normals": [
          5,
          6,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          7,
          18
        ],
        "normals": [
          6,
          7,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          15,
          4
        ],
        "normals": [
          0,
          15,
          4
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          15,
          9
        ],
        "normals": [
          3,
          15,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          11,
          10
        ],
        "normals": [
          1,
          11,
          10
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          18,
          12
        ],
        "normals": [
          11,
          18,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          13,
          12
        ],
        "normals": [
          1,
          13,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          15,
          14
        ],
        "normals": [
          2,
          15,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          14,
          15
        ],
        "normals": [
          1,
          14,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          2,
          8
        ],
        "normals": [
          0,
          2,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          8,
          14
        ],
        "normals": [
          6,
          8,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          16,
          13
        ],
        "normals": [
          10,
          16,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          12,
          16
        ],
        "normals": [
          1,
          12,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          17,
          8
        ],
        "normals": [
          7,
          17,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          18,
          9
        ],
        "normals": [
          8,
          18,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          14,
          17
        ],
        "normals": [
          6,
          14,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          16,
          17
        ],
        "normals": [
          11,
          16,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          16,
          18,
          17
        ],
        "normals": [
          16,
          18,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          17,
          14
        ],
        "normals": [
          10,
          17,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          3,
          9
        ],
        "normals": [
          0,
          3,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          1,
          2
        ],
        "normals": [
          0,
          1,
          2
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          3,
          4
        ],
        "normals": [
          2,
          3,
          4
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          9,
          18
        ],
        "normals": [
          7,
          9,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          9,
          6
        ],
        "normals": [
          1,
          9,
          6
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          6,
          18
        ],
        "normals": [
          1,
          6,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          8,
          15
        ],
        "normals": [
          0,
          8,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          9,
          15
        ],
        "normals": [
          8,
          9,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          18,
          11
        ],
        "normals": [
          1,
          18,
          11
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          12,
          13
        ],
        "normals": [
          11,
          12,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          10,
          13
        ],
        "normals": [
          1,
          10,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          4,
          15
        ],
        "normals": [
          2,
          4,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          15,
          3
        ],
        "normals": [
          1,
          15,
          3
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          14,
          8
        ],
        "normals": [
          2,
          14,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          8,
          6
        ],
        "normals": [
          5,
          8,
          6
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          14,
          16
        ],
        "normals": [
          10,
          14,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          16,
          14
        ],
        "normals": [
          1,
          16,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          7,
          8
        ],
        "normals": [
          5,
          7,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          17,
          18
        ],
        "normals": [
          8,
          17,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          17,
          7
        ],
        "normals": [
          6,
          17,
          7
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          13,
          16
        ],
        "normals": [
          11,
          13,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          12,
          18,
          16
        ],
        "normals": [
          12,
          18,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          11,
          17
        ],
        "normals": [
          10,
          11,
          17
        ]
      }
    }
  ],
  "vertices": [
    [
      15.005896,
      -0.096932136,
      0.035714287
    ],
    [
      15.032319,
      1.3814715,
      0.07692308
    ],
    [
      14.85898,
      0.023603572,
      -0.071428575
    ],
    [
      15.036084,
      0.0625,
      0.125
    ],
    [
      14.7667465,
      -0.40400624,
      0.0625
    ],
    [
      15.922697,
      0.79014397,
      0.0625
    ],
    [
      15.74002,
      1.2527441,
      -0.03125
    ],
    [
      16.038675,
      1.1591878,
      0.0
    ],
    [
      15.546143,
      0.94594526,
      0.025
    ],
    [
      15.369417,
      0.61406684,
      0.083333336
    ],
    [
      14.954895,
      2.2789257,
      -0.125
    ],
    [
      15.005896,
      2.5789828,
      0.035714287
    ],
    [
      15.1,
      2.5052557,
      0.1
    ],
    [
      14.670095,
      2.5570505,
      0.1
    ],
    [
      15.010317,
      1.2410252,
      -0.125
    ],
    [
      15.082797,
      0.19028437,
      0.0625
    ],
    [
      15.082798,
      2.3152037,
      0.0625
    ],
    [
      15.3785515,
      1.8498192,
      -0.03125
    ],
    [
      15.381446,
      1.8054839,
      0.0
    ]
  ],
  "normals": [
    [
      -0.4886084,
      0.12718207,
      0.8631839
    ],
    [
      -0.664243,
      0.07194856,
      0.7440462
    ],
    [
      0.35895836,
      -0.25200513,
      -0.89868927
    ],
    [
      0.011408238,
      0.00040404886,
      -0.99993485
    ],
    [
      -0.4580849,
      0.5209744,
      0.72023875
    ],
    [
      -0.99893653,
      0.03817275,
      -0.025858365
    ],
    [
      0.9735466,
      -0.22779974,
      0.017729599
    ],
    [
      -0.70585155,
      -0.7018844,
      -0.0955612
    ],
    [
      0.9565527,
      -0.2847938,
      -0.06244577
    ],
    [
      0.7918316,
      -0.3983026,
      0.46298775
    ],
    [
      -0.8940301,
      -0.3533667,
      0.27539447
    ],
    [
      -0.10991954,
      -0.14431188,
      0.9834083
    ],
    [
      -0.6269063,
      -0.3110355,
      -0.71431476
    ],
    [
      0.31478494,
      -0.89980054,
      0.30210844
    ],
    [
      -0.7561371,
      -0.046963345,
      -0.65272593
    ],
    [
      -0.34832343,
      -0.4122628,
      0.84184927
    ],
    [
      -0.52481264,
      0.091003954,
      0.84633917
    ],
    [
      0.8669916,
      0.36035636,
      -0.34419322
    ],
    [
      0.40961483,
      0.09252263,
      0.90755457
    ]
  ]
}
