src/mesh/snapshots/tests__triple_torus_after_2_iteration2_of_laplacian_smoothing.snap
---
source: src/mesh/smoothing.rs
expression: "&relaxed_mesh"
---
{
  "faces": [
    {
      "Triangle": {
        "vertices": [
          0,
          4,
          3
        ],
        "normals": [
          0,
          4,
          3
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          9,
          1
        ],
        "normals": [
          0,
          9,
          1
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          3,
          2
        ],
        "normals": [
          1,
          3,
          2
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          9,
          7
        ],
        "normals": [
          5,
          9,
          7
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          6,
          9
        ],
        "normals": [
          5,
          6,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          7,
          18
        ],
        "normals": [
          6,
          7,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          15,
          4
        ],
        "normals": [
          0,
          15,
          4
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          3,
          15,
          9
        ],
        "normals": [
          3,
          15,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          11,
          10
        ],
        "normals": [
          1,
          11,
          10
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          18,
          12
        ],
        "normals": [
          11,
          18,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          13,
          12
        ],
        "normals": [
          1,
          13,
          12
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          15,
          14
        ],
        "normals": [
          2,
          15,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          14,
          15
        ],
        "normals": [
          1,
          14,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          2,
          8
        ],
        "normals": [
          0,
          2,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          8,
          14
        ],
        "normals": [
          6,
          8,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          16,
          13
        ],
        "normals": [
          10,
          16,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          12,
          16
        ],
        "normals": [
          1,
          12,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          17,
          8
        ],
        "normals": [
          7,
          17,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          18,
          9
        ],
        "normals": [
          8,
          18,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          14,
          17
        ],
        "normals": [
          6,
          14,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          16,
          17
        ],
        "normals": [
          11,
          16,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          16,
          18,
          17
        ],
        "normals": [
          16,
          18,
          17
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          17,
          14
        ],
        "normals": [
          10,
          17,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          3,
          9
        ],
        "normals": [
          0,
          3,
          9
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          1,
          2
        ],
        "normals": [
          0,
          1,
          2
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          3,
          4
        ],
        "normals": [
          2,
          3,
          4
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          7,
          9,
          18
        ],
        "normals": [
          7,
          9,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          9,
          6
        ],
        "normals": [
          1,
          9,
          6
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          6,
          18
        ],
        "normals": [
          1,
          6,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          0,
          8,
          15
        ],
        "normals": [
          0,
          8,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          9,
          15
        ],
        "normals": [
          8,
          9,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          18,
          11
        ],
        "normals": [
          1,
          18,
          11
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          12,
          13
        ],
        "normals": [
          11,
          12,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          10,
          13
        ],
        "normals": [
          1,
          10,
          13
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          4,
          15
        ],
        "normals": [
          2,
          4,
          15
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          15,
          3
        ],
        "normals": [
          1,
          15,
          3
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          2,
          14,
          8
        ],
        "normals": [
          2,
          14,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          8,
          6
        ],
        "normals": [
          5,
          8,
          6
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          14,
          16
        ],
        "normals": [
          10,
          14,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          1,
          16,
          14
        ],
        "normals": [
          1,
          16,
          14
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          5,
          7,
          8
        ],
        "normals": [
          5,
          7,
          8
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          8,
          17,
          18
        ],
        "normals": [
          8,
          17,
          18
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          6,
          17,
          7
        ],
        "normals": [
          6,
          17,
          7
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          11,
          13,
          16
        ],
        "normals": [
          11,
          13,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          12,
          18,
          16
        ],
        "normals": [
          12,
          18,
          16
        ]
      }
    },
    {
      "Triangle": {
        "vertices": [
          10,
          11,
          17
        ],
        "normals": [
          10,
          11,
          17
        ]
      }
    }
  ],
  "vertices": [
    [
      15.098926,
      0.40198073,
      0.051975407
    ],
    [
      15.099895,
      1.332938,
      0.019391026
    ],
    [
      15.068614,
      0.47432685,
      0.037519626
    ],
    [
      15.019359,
      0.284748,
      0.04159035
    ],
    [
      14.995939,
      0.04486395,
      0.037946425
    ],
    [
      15.673564,
      0.99298596,
      0.019270834
    ],
    [
      15.459946,
      1.223393,
      0.011438304
    ],
    [
      15.556378,
      1.2097006,
      0.018055556
    ],
    [
      15.3788805,
      0.8829427,
      -0.0014880955
    ],
    [
      15.420674,
      0.83231425,
      0.0395986
    ],
    [
      15.029996,
      1.9872588,
      0.01981456
    ],
    [
      15.08573,
      2.09903,
      0.026167585
    ],
    [
      15.03451,
      2.1276383,
      0.055027474
    ],
    [
      15.035182,
      2.211968,
      0.030027473
    ],
    [
      15.209562,
      1.2797496,
      -0.004000687
    ],
    [
      15.078238,
      0.47095925,
      0.026505265
    ],
    [
      15.06669,
      2.024752,
      0.0039234217
    ],
    [
      15.345023,
      1.6971874,
      -0.019754464
    ],
    [
      15.365978,
      1.6225197,
      0.03566341
    ]
  ],
  "normals": [
    [
      -0.03831246,
      -0.03291188,
      0.30341122
    ],
    [
      -0.057181288,
      0.0069088126,
      0.21949103
    ],
    [
      0.19040601,
      -0.056750603,
      0.32433963
    ],
    [
      0.1691753,
      -0.113915265,
      -0.08884991
    ],
    [
      0.1271717,
      -0.0062521044,
      0.36772847
    ],
    [
      -0.0046899887,
      0.0069726296,
      -0.00017943978
    ],
    [
      0.030328557,
      -0.007785823,
      -0.00047711283
    ],
    [
      -0.06589056,
      -0.031678736,
      -0.00091701746
    ],
    [
      0.17506298,
      -0.01753285,
      -0.2903363
    ],
    [
      0.21512559,
      -0.0948082,
      -0.11891229
    ],
    [
      0.14142951,
      0.019080834,
      -0.017424628
    ],
    [
      -0.27297717,
      -0.13695164,
      0.19664225
    ],
    [
      -0.0798367,
      -0.02052582,
      -0.44368207
    ],
    [
      0.16246516,
      -0.07260998,
      0.067651525
    ],
    [
      0.07096774,
      -0.017535873,
      -0.54106003
    ],
    [
      0.09492334,
      -0.039700385,
      -0.085042626
    ],
    [
      0.064995736,
      0.06594959,
      0.27865183
    ],
    [
      0.15468577,
      0.04264371,
      -0.23447229
    ],
    [
      0.24599124,
      0.06410602,
      0.027431224
    ]
  ]
}
